# webapp

./: .gitmodules  Readme.md  Readme.org  flake.nix  webapp.cabal
app/: Main.hs  Vega.hs  WeatherForecast.hs
app/Weather/: App.hs  Forecast.hs  Zamg.hs
data/: TAG Datensatz_20221001_20221014.csv  default-october2022-hohewarte.csv  parameter-metadaten.csv  sample.csv  test-data.csv
modules/: webapp.nix
src/Weather/: App.hs  Data.hs  Forecast.hs  Zamg.hs
static/css/: style.css
test/: Spec.hs
