cabal-version:      3.0
name:               webapp
version:            0.1.0.0
synopsis:           Plot something
description:
  Please see the README at <https://github.com/dschrempf/webapp#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/webapp#readme
bug-reports:        https://github.com/dschrempf/webapp/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2022 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:

source-repository head
  location: https://github.com/dschrempf/webapp
  type:     git

common common
  default-extensions:

common lib
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints -Werror

common bench
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints -Werror

common exec
  default-language: Haskell2010
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

---Werror
library
  import:          common, lib
  exposed-modules:
    Vega
    Weather.App
    Weather.Data
    Weather.Forecast
    Weather.Zamg

  hs-source-dirs:  src
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , ad
    , aeson
    , base          >=4.7 && <5
    , bytestring
    , cassava
    , http-conduit
    , hvega
    , lens
    , lucid
    , mcmc
    , random
    , scotty
    , text
    , time
    , vector

executable webapp
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base    >=4.7 && <5
    , lucid
    , scotty
    , text
    , time
    , webapp

test-suite webapp-test
  import:          common, test
  main-is:         Spec.hs
  hs-source-dirs:  test
  other-modules:
  autogen-modules:
  ghc-options:
  type:            exitcode-stdio-1.0
  build-depends:
    , base        >=4.7 && <5
    , bytestring
    , hspec
    , time
    , webapp
